# mangaibackend

./: .env  .env.example  README.md  pyproject.toml  render.yaml
app/: main.py
app/auth/repository/: repository.py
app/auth/router/: router_authorize_user.py  router_get_my_account.py  router_get_unique.py  router_reset_account.py  router_update_user.py
app/manga_text/: service.py
app/manga_text/repository/: repository.py
app/manga_text/router/: router_change_review.py  router_create_review.py  router_delete_review.py  router_get_collection.py  router_get_review.py  router_manga_create.py  router_manga_get.py  router_manga_get_img.py
app/manga_text/tasks/: 1233.py  aaa.py  generators.py
